# grounding-ai

./: .dockerignore  .gitignore  .mcp.example.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.example.yaml  how-to-local-agent.md  pyproject.toml
.github/workflows/: ci.yml  eval.yml
agents/examples/: coder.yaml  philosopher.yaml  scientist.yaml
docs/: MIGRATION-v0.1-to-v0.2.md  ROADMAP.md  SESSION-SUMMARY-2025-10-17.md  TECH-DEBT.md  WORKING-CONFIG.md  architecture.md  multi-machine.md  prd.md
docs/epics/: README-v02.md  epic-1-project-setup-v02.md  epic-10-centralized-corpus-v02.md  epic-11-interactive-corpus-agents-v02.md  epic-12-agentic-tool-calling-v02.md  epic-16-evaluation-harness.md  epic-17-page-and-section-citations.md  epic-18-cross-encoder-reranking.md  epic-19-hybrid-retrieval-bm25-dense.md  epic-2-parser-integration-v02.md  epic-3-chunking-metadata-v02.md  (+9 more)
grounding/: __init__.py  agent_filter.py  bm25.py  chunk_metadata.py  chunker.py  citations.py  cli.py  config.py  controller.py  embedder.py  formatter.py  formula_extractor.py  formula_formatter.py  hashing.py  hybrid.py  hybrid_processor.py  logging_setup.py  manifest.py  meta.py  music_descriptions.py  music_formatter.py  omr_parser.py  parser.py  pipeline.py  query.py  reranker.py  scanner.py  stats.py  utils.py  vector_store.py  writer.py
mcp_servers/: __init__.py
scripts/: README.md  add_collections.py  agentic.py  download-philosophy-corpus.sh  filesystem_tools.py  generate_agent_commands.py  grounding-watcher.service.example  ingest_docs.py  local_rag.py  migrate_corpus.py  search_corpus_tool.py  staging-watcher.sh
test_pdfs/: create_formula_test_pdfs.py  create_test_formula.py
tests/: __init__.py  integration_utils.py  test_agent_command_generator.py  test_agent_filter.py  test_agentic.py  test_bm25.py  test_bm25_integration.py  test_chunk_metadata.py  test_chunker.py  test_chunker_provenance.py  test_citations.py  test_cli.py  test_config_resolution.py  test_controller.py  test_e2e_embeddings.py  test_embedder.py  test_eval_baseline.py  test_eval_citation_accuracy.py  test_eval_cli.py  test_eval_fixtures.py  test_eval_metrics.py  test_eval_report.py  test_eval_runner.py  test_eval_runner_hybrid.py  test_eval_runner_integration.py  test_formatter.py  test_formatter_element_map.py  test_formula_extractor.py  test_formula_formatter.py  test_formula_integration.py  test_hashing.py  test_hybrid.py  test_hybrid_processor.py  test_integration.py  test_local_rag_cli.py  test_local_rag_cli_flags.py  test_local_rag_rerank.py  test_logging_setup.py  test_manifest.py  test_mcp_server_output.py  (+19 more)
(+222 files in other folders)
